--- a/css/styles.css
+++ b/css/styles.css
@@ -47,7 +47,7 @@ p {
 .header {
   border-bottom: 1px solid var(--border-color);
 }
-.header-logo {
+.logo {
   margin-right: 93px;
   font-family: "Raleway";
   font-size: 26px;
@@ -59,28 +59,27 @@ p {
 .front-logo {
   color: var(--active-color);
 }
-.header-list {
+.header__list {
   display: flex;
 }
 
-.header-list-item:not(:first-child) {
+.header__item:not(:first-child) {
   margin-left: 50px;
 }
-.header-contacts {
+.contacts {
   margin-left: auto;
 }
-.header-list-item {
+.header__item {
   font-weight: 500;
   font-size: 14px;
   line-height: 1.14;
   letter-spacing: 0.02em;
-}
-
-.header-list-item {
   position: relative;
 }
 
-.header-list-item .studio::after {
+
+
+.header__item .studio::after {
   content: "";
   position: absolute;
   width: 100%;
@@ -91,7 +90,7 @@ p {
   transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
 } 
 
-.header-list-item .portfolio::after {
+.header__item .portfolio::after {
   content: "";
   position: absolute;
   width: 100%;
@@ -102,13 +101,13 @@ p {
   transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.header-list-link {
+.header__link {
   color: var(--main-color);
   padding: 32px 0 31px;
   display: block;
 }
 
-.header-link {
+.contacts__link {
   display: flex;
   align-items: center;
   padding: 32px 0 31px;
@@ -144,7 +143,7 @@ p {
   background-position: center;
 }
 
-.hero-title {
+.hero__title {
   margin: 0 auto 30px;
   width: 645px;
   font-weight: 900;
@@ -163,14 +162,14 @@ p {
   border: none;
   border-radius: 4px;
 }
-.hero-button {
+.hero__button {
   padding: 10px 32px;
   
 }
 
 /* Наші переваги */
 
-.benefits-title {
+.benefits__title {
   margin-bottom: 10px;
   font-size: 14px;
   line-height: 1.14;
@@ -178,30 +177,30 @@ p {
   text-transform: uppercase;
   color: var(--main-color);
 }
-.benefits-list {
+.benefits__list {
   display: flex;
 }
-.benefits-icon-list {
+.benefits__icon-list {
   display: flex;
 }
-.benefits-icon-item {
+.benefits__icon-item {
   padding: 25px 100px;
   background-color: var(--team-background-color);
   border-radius: 4px;
   margin-right: 30px;
   margin-bottom: 30px;
 }
-.benefits-icon-item:last-child {
+.benefits__icon-item:last-child {
   margin-right: 0;
 }
 
-.benefits-list li:not(:first-child) {
+.benefits__item:not(:first-child) {
   margin-left: 30px;
 }
-.benefits-list li {
-  width: 270px;
+.benefits__item {
+  min-width: 270px;
 }
-.benefits-text {
+.benefits__text {
   font-size: 14px;
   line-height: 1.71;
   letter-spacing: 0.03em;
@@ -212,7 +211,7 @@ p {
 .profile {
   padding-top: 0;
 }
-.profile-title {
+.profile__title {
   margin-bottom: 50px;
   text-align: center;
   font-size: 36px;
@@ -220,18 +219,18 @@ p {
   letter-spacing: 0.03em;
   color: var(--main-color);
 }
-.profile-list {
+.profile__list {
   display: flex;
 }
-.profile-list li:not(:first-child) {
+.profile__card-item:not(:first-child) {
   margin-left: 30px;
 }
 
-.profile-box-item {
+.profile__card-item {
   position: relative;
 }
 
-.profile-box-img {
+.profile__card-img {
   position: absolute;
   top: 224px ;
   padding: 27px;
@@ -239,7 +238,7 @@ p {
   background-color: rgba(47, 48, 58, 0.8);
 }
 
-.profile-box-title {
+.profile__card-title {
   font-size: 14px;
   line-height: 16px;
   text-align: center;
@@ -254,11 +253,14 @@ p {
   background: var(--team-background-color);
 }
 
-.team-item {
+.team__item {
+  flex-basis: calc((100% - 30px) / 4);
+  margin-right: 30px;
+  text-align: center;
   background-color: var(--white-color);
   box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
 }
-.team-title {
+.team__title {
   text-align: center;
   margin-bottom: 50px;
   font-size: 36px;
@@ -266,16 +268,12 @@ p {
   letter-spacing: 0.03em;
   color: var(--main-color);
 }
-.team-list {
+.team__list {
   display: flex;
   margin-right: -30px;
 }
-.team-item {
-  flex-basis: calc((100% - 30px) / 4);
-  margin-right: 30px;
-  text-align: center;
-}
-.team-name {
+
+.team__name {
   margin-bottom: 10px;
   font-weight: 500;
   font-size: 16px;
@@ -283,30 +281,30 @@ p {
   letter-spacing: 0.03em;
   color: var(--main-color);
 }
-.team-profession {
+.team__profession {
   margin-bottom: 16px;
   font-size: 16px;
   line-height: 1.18;
   letter-spacing: 0.03em;
   color: var(--link-color);
 }
-.team-text {
+.team__text {
   padding: 30px 32px;
 }
-.cocial-icons {
+.cocial {
   display: flex;
 }
-.cocial-item {
+.cocial__item {
   width: 44px;
   height: 44px;
   margin-right: 10px;
   border-radius: 50%;
   transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
-.cocial-item:last-child {
+.cocial__item:last-child {
   margin-right: 0;
 }
-.cocial-link {
+.cocial__link {
   width: 100%;
   height: 100%;
   display: flex;
@@ -317,19 +315,19 @@ p {
  
   
 }
-.cocial-item:hover {
+.cocial__item:hover {
   background-color: var(--active-color);
 }
-.cocial-link:hover {
+.cocial__link:hover {
   fill: var(--white-color);
 }
-.cocial-link:focus {
+.cocial__link:focus {
   background-color: var(--active-color);
   fill: var(--white-color);
 }
 /* Постійні клієнти */
 
-.customers-title {
+.customers__title {
   text-align: center;
   margin-bottom: 50px;
   font-size: 36px;
@@ -337,13 +335,13 @@ p {
   letter-spacing: 0.03em;
   color: var(--main-color);
 }
-.customers-item {
+.customers__item {
   margin-right: 30px;
 }
-.customers-item:last-child {
+.customers__item:last-child {
   margin-right: 0;
 }
-.customers-link {
+.customers__link {
   display: flex;
   fill: #afb1b8;
   padding: 15px 31px;
@@ -352,12 +350,12 @@ p {
   transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
   
 }
-.customers-list {
+.customers__list {
   display: flex;
 }
 
-.customers-link:hover,
-.customers-link:focus {
+.customers__link:hover,
+.customers__link:focus {
   border-color: var(--active-color);
   fill: var(--active-color);
 }
@@ -367,41 +365,38 @@ p {
   background: var(--background-footer-color);
   
 }
-.footer-logo {
+.footer__logo {
+  margin-right: 0;
   margin-bottom: 20px;
   display: inline-block;
-  font-family: "Raleway";
-  font-size: 26px;
-  line-height: 31px;
-  letter-spacing: 0.03em;
-  color: var(--white-color);
-  text-decoration: none;
+  color: var(--white-color);  
 }
-.address-item {
+
+.address__item {
   font-style: normal;
   font-size: 14px;
   line-height: 1.71;
   letter-spacing: 0.03em;
   color: rgba(255, 255, 255, 0.6);
 }
-.address-map-link {
+.address__map-link {
   display: inline-block;
   margin-bottom: 9px;
   color: var(--white-color);
 }
-.address-mail-link {
+.address__mail-link {
   display: inline-block;
   margin-bottom: 9px;
   color: inherit;
 }
-.address-tel-link {
+.address__tel-link {
   display: inline-block;
   color: inherit;
 }
 .footer .container {
   display: flex;
 }
-.footer-title {
+.footer__title {
   margin-bottom: 20px;
   font-size: 14px;
   line-height: 1.14;
@@ -415,18 +410,18 @@ p {
 .footer-cocial-link {
   fill: var(--white-color);
 }
-.footer-cocial-icons {
+.footer__cocial {
   margin-left: 70px;
   padding-top: 12px;
 }
 
-.footer-form {
+.subscription {
   padding: 12px 0 0 113px;
   margin-left: auto;
   
 }
 
-.subscription-title {
+.subscription__title {
   margin-bottom: 20px;
   font-size: 14px;
   line-height: 1.14;
@@ -435,7 +430,7 @@ p {
   color: var(--white-color); 
 }
 
-.footer-input {
+.form-subscription__input {
   width: 358px;
   height: 50px;
   padding:0 0 0 16px;
@@ -449,14 +444,14 @@ p {
   color: rgba(255, 255, 255,);
 }
 
-.footer-input::placeholder {
+.form-subscription__input::placeholder {
   font-size: 16px;
   line-height: 1.25;
   letter-spacing: 0.03em;
   color: rgba(255, 255, 255,);
 }
 
-.footer-input:focus-visible {
+.form-subscription__input:focus-visible {
   background-color: var(--white-color);
   border-color: var(--white-color);
   transition:  250ms cubic-bezier(0.4, 0, 0.2, 1);
@@ -478,16 +473,18 @@ p {
   
 }
 
-.button-text {
+.footer-button__text {
   margin-right: 34px;
 }
 
-.subscription-icon {
+.footer-button__icon {
   position: absolute;
   top: 13px;
   right: 28px;
+  cursor: pointer;
   
 }
+
 
 
 /* Сторінка Портфоліо */
@@ -496,17 +493,17 @@ p {
   display: none;
 }
 
-.filters-list {
+.filters__list {
   display: flex;
   justify-content: center;
   margin-bottom: 50px;
   
 }
 
-.filters-list-item:not(:first-child) {
+.filters__item:not(:first-child) {
   margin-left: 8px;
 }
-.filters-button {
+.filters__button {
   transition:  250ms cubic-bezier(0.4, 0, 0.2, 1);
   padding: 6px 22px;
   font-weight: 500;
@@ -518,27 +515,27 @@ p {
   background-color: var(--filters-button-background-color);
   border-width: 0px;
 }
-.filters-button:hover,
-.filters-button:focus {
+.filters__button:hover,
+.filters__button:focus {
   color: var(--white-color);
   background-color: var(--active-color);
 }
-.filters-list-item:hover,
-.filters-list-item:focus {
+.filters__item:hover,
+.filters__item:focus {
   box-shadow: 0 4px 4px 0 rgba(0, 0, 0, 0.25);
 }
-.filters-list-item {
+.filters__item {
   border-radius: 4px;
 }
 
    /* Проекти */
 
-.projects-list {
+.projects__list {
   display: flex;
   flex-wrap: wrap;
   margin-right: -30px;
 }
-.projects-img {
+.projects__img {
   display: block;
 }
 .projects {
@@ -546,29 +543,29 @@ p {
   border: 1px solid var(--border-color);
 }
 
-.projects-item {
+.projects__item {
   cursor: pointer;
 }
 
-.projects-item:hover {
+.projects__item:hover {
   box-shadow: 0 4px 4px 0 rgba(0, 0, 0, 0.25);
 }
-.projects-list li {
+.projects__item {
   flex-basis: calc((100% - 30px) / 4);
   margin-right: 30px;
   margin-top: 30px;
 }
-.projects-list li:nth-child(-n + 3) {
+.projects__item:nth-child(-n + 3) {
   margin-top: 0px;
 }
-.projects-list-title {
+.projects__title {
   margin-bottom: 4px;
   font-size: 18px;
   line-height: 2;
   letter-spacing: 0.06em;
   color: var(--main-color);
 }
-.projects-list-text {
+.projects__text {
   font-size: 16px;
   line-height: 1.87;
   letter-spacing: 0.03em;
@@ -580,7 +577,7 @@ p {
   overflow: hidden;
 }
 
-.projects-box {
+.projects__box {
   position: absolute;
   top: 0px;
   padding: 63px 24px;
@@ -590,11 +587,11 @@ p {
   
 }
 
-.projects-item:hover .projects-box {
+.projects__item:hover .projects__box {
   transform: translateY(0);
 }
 
-.projects-box-text {
+.projects__box-text {
   font-size: 18px;
   line-height: 28px;
   letter-spacing: 0.03em;
@@ -642,11 +639,11 @@ p {
   background-color: var(--white-color);
 }
 
-.modal-icon {
+.modal__icon {
   fill: var(--header-logo-color);
 }
 
-.close-sign:hover .modal-icon {
+.close-sign:hover .modal__icon {
   fill: var(--active-color);
 }
 
@@ -656,11 +653,11 @@ p {
   pointer-events: none;
 }
 
-.modal-form {
+.modal__form {
   padding: 40px;
 }
 
-.form-title {
+.modal__title {
   text-align: center;
   margin: 0 auto 12px;
   font-weight: 700;
@@ -670,7 +667,7 @@ p {
   color: var(--main-color);
 }
 
-.modal-input {
+.modal__input {
   width: 100%;
   height: 40px;
   padding-left: 42px;
@@ -680,12 +677,12 @@ p {
   
 }
 
-.modal-input:focus-visible {
+.modal__input:focus-visible {
   border-color: var(--active-color);
   transition:  250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.modal-label {
+.modal__label {
   display: block;
   font-size: 12px;
   line-height: 1.16;
@@ -694,7 +691,7 @@ p {
   margin-bottom: 4px;
 }
 
-.modal-textarea {
+.modal__textarea {
   width: 100%;
   height: 120px;
   border: 1px solid rgba(33, 33, 33, 0.2);
@@ -704,12 +701,12 @@ p {
   outline-style: none;
 }
 
-.modal-textarea:focus-visible {
+.modal__textarea:focus-visible {
   border-color: var(--active-color);
   transition:  250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
  
-.modal-textarea::placeholder {
+.modal__textarea::placeholder {
   font-size: 12px;
   line-height: 1.16;
   letter-spacing: 0.01em;
@@ -721,7 +718,7 @@ p {
   margin-bottom: 10px;
 }
 
-.input-icon {
+.modal__input-icon {
   position: absolute;
   left: 12px;
   top: 50%;
@@ -729,7 +726,7 @@ p {
   fill: var(--main-color);
 }
 
-.modal-input:focus + .input-icon {
+.modal__input:focus + .input-icon {
   fill: var(--active-color);
   transition:  250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
@@ -740,7 +737,7 @@ padding-left: 13px;
 
 }
 
-.checkbox-agree {
+.modal__checkbox {
   display: flex;
   align-items: center;
   font-style: normal;
@@ -751,7 +748,7 @@ padding-left: 13px;
   color: #757575;
 }
 
-.checkbox-agree .icon-wrapper {
+.modal__checkbox .modal__icon-wrapper {
   width: 16px;
   height: 15px;
   border: 1.8px solid var(--main-color);
@@ -762,21 +759,21 @@ padding-left: 13px;
   align-items: center;
 }
 
-.checkbox-agree .agree-icon {
+.modal__checkbox .modal__agree-icon {
   fill: transparent;
 }
 
-.check-line input:checked + .checkbox-agree .icon-wrapper {
+.check-line input:checked + .modal__checkbox .modal__icon-wrapper {
   background-color:var(--active-color);
   border: none;
   transition:  250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.check-line input:checked + .checkbox-agree .agree-icon {
+.check-line input:checked + .modal__checkbox .modal__agree-icon {
   fill: var(--white-color);
 }
 
-.modal-button {
+.modal__form-button {
   display: inline-block;
   width: 200px;
   height: 50px;
@@ -784,12 +781,12 @@ padding-left: 13px;
   
 }
 
-.form-button {
+.modal__button {
   padding-left: 124px;
   
 }
 
-.modal-link {
+.modal__link {
   margin-left: 3px;
   color: var(--active-color);
 }
