--- a/sass/utils/_variables.scss
+++ b/sass/utils/_variables.scss
@@ -10,3 +10,6 @@
     --border-color: #eeeeee;
     --team-background-color: #f5f4fa;
   }
+
+  $font-roboto: "Roboto", sans-serif;
+  $font-raleway: "Raleway";
