--- a/css/main.css
+++ b/css/main.css
@@ -56,6 +56,9 @@ p {
   pointer-events: none;
 }
 
+.header {
+  border-bottom: 1px solid var(--border-color);
+}
 .header .container {
   display: -webkit-box;
   display: -ms-flexbox;
@@ -65,18 +68,10 @@ p {
           align-items: center;
 }
 
-.header {
-  border-bottom: 1px solid var(--border-color);
-}
-
 .header__list {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-}
-
-.header__item:not(:first-child) {
-  margin-left: 50px;
 }
 
 .contacts {
@@ -90,7 +85,9 @@ p {
   letter-spacing: 0.02em;
   position: relative;
 }
-
+.header__item:not(:first-child) {
+  margin-left: 50px;
+}
 .header__item .studio::after {
   content: "";
   position: absolute;
@@ -102,7 +99,6 @@ p {
   -webkit-transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
   transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
-
 .header__item .portfolio::after {
   content: "";
   position: absolute;
@@ -141,9 +137,7 @@ p {
   -webkit-transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
   transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
-
-.header__link--active:hover,
-.header__link--active:focus {
+.header__link--active:hover, .header__link--active:focus {
   color: var(--active-color);
   fill: var(--active-color);
 }
@@ -183,7 +177,7 @@ p {
 }
 
 .button {
-  font-family: "Roboto";
+  font-family: "Roboto", sans-serif;
   cursor: pointer;
   font-weight: 700;
   font-size: 16px;
@@ -226,17 +220,15 @@ p {
   margin-right: 30px;
   margin-bottom: 30px;
 }
-
 .benefits__icon-item:last-child {
   margin-right: 0;
 }
 
-.benefits__item:not(:first-child) {
-  margin-left: 30px;
-}
-
 .benefits__item {
   min-width: 270px;
+}
+.benefits__item:not(:first-child) {
+  margin-left: 30px;
 }
 
 .benefits__text {
@@ -265,12 +257,11 @@ p {
   display: flex;
 }
 
-.profile__card-item:not(:first-child) {
-  margin-left: 30px;
-}
-
 .profile__card-item {
   position: relative;
+}
+.profile__card-item:not(:first-child) {
+  margin-left: 30px;
 }
 
 .profile__card-img {
@@ -355,9 +346,11 @@ p {
   -webkit-transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
   transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
-
 .cocial__item:last-child {
   margin-right: 0;
+}
+.cocial__item:hover {
+  background-color: var(--active-color);
 }
 
 .cocial__link {
@@ -376,15 +369,9 @@ p {
   -webkit-transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
   transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
-
-.cocial__item:hover {
-  background-color: var(--active-color);
-}
-
 .cocial__link:hover {
   fill: var(--white-color);
 }
-
 .cocial__link:focus {
   background-color: var(--active-color);
   fill: var(--white-color);
@@ -402,7 +389,6 @@ p {
 .customers__item {
   margin-right: 30px;
 }
-
 .customers__item:last-child {
   margin-right: 0;
 }
@@ -418,6 +404,10 @@ p {
   -webkit-transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
   transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
+.customers__link:hover, .customers__link:focus {
+  border-color: var(--active-color);
+  fill: var(--active-color);
+}
 
 .customers__list {
   display: -webkit-box;
@@ -425,15 +415,14 @@ p {
   display: flex;
 }
 
-.customers__link:hover,
-.customers__link:focus {
-  border-color: var(--active-color);
-  fill: var(--active-color);
-}
-
 .footer {
   padding: 60px 0;
   background: var(--background-footer-color);
+}
+.footer .container {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
 }
 
 .footer__logo {
@@ -455,9 +444,7 @@ p {
   -webkit-transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
   transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
-
-.address__link--active:hover,
-.address__link--active:focus {
+.address__link--active:hover, .address__link--active:focus {
   color: var(--active-color);
   fill: var(--active-color);
 }
@@ -477,12 +464,6 @@ p {
 .address__tel-link {
   display: inline-block;
   color: inherit;
-}
-
-.footer .container {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
 }
 
 .footer__title {
@@ -534,42 +515,36 @@ p {
   letter-spacing: 0.03em;
   color: rgb(255, 255, 255);
 }
-
 .form-subscription__input::-webkit-input-placeholder {
   font-size: 16px;
   line-height: 1.25;
   letter-spacing: 0.03em;
   color: rgb(255, 255, 255);
 }
-
 .form-subscription__input::-moz-placeholder {
   font-size: 16px;
   line-height: 1.25;
   letter-spacing: 0.03em;
   color: rgb(255, 255, 255);
 }
-
 .form-subscription__input:-ms-input-placeholder {
   font-size: 16px;
   line-height: 1.25;
   letter-spacing: 0.03em;
   color: rgb(255, 255, 255);
 }
-
 .form-subscription__input::-ms-input-placeholder {
   font-size: 16px;
   line-height: 1.25;
   letter-spacing: 0.03em;
   color: rgb(255, 255, 255);
 }
-
 .form-subscription__input::placeholder {
   font-size: 16px;
   line-height: 1.25;
   letter-spacing: 0.03em;
   color: rgb(255, 255, 255);
 }
-
 .form-subscription__input:focus-visible {
   background-color: var(--white-color);
   border-color: var(--white-color);
@@ -613,10 +588,6 @@ p {
   margin-bottom: 50px;
 }
 
-.filters__item:not(:first-child) {
-  margin-left: 8px;
-}
-
 .filters__button {
   -webkit-transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
   transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
@@ -630,21 +601,20 @@ p {
   background-color: var(--filters-button-background-color);
   border-width: 0px;
 }
-
-.filters__button:hover,
-.filters__button:focus {
+.filters__button:hover, .filters__button:focus {
   color: var(--white-color);
   background-color: var(--active-color);
 }
 
-.filters__item:hover,
-.filters__item:focus {
-  -webkit-box-shadow: 0 4px 4px 0 rgba(0, 0, 0, 0.25);
-          box-shadow: 0 4px 4px 0 rgba(0, 0, 0, 0.25);
-}
-
 .filters__item {
   border-radius: 4px;
+}
+.filters__item:not(:first-child) {
+  margin-left: 8px;
+}
+.filters__item:hover, .filters__item:focus {
+  -webkit-box-shadow: 0 4px 4px 0 rgba(0, 0, 0, 0.25);
+          box-shadow: 0 4px 4px 0 rgba(0, 0, 0, 0.25);
 }
 
 .projects__list {
@@ -667,20 +637,15 @@ p {
 
 .projects__item {
   cursor: pointer;
-}
-
-.projects__item:hover {
-  -webkit-box-shadow: 0 4px 4px 0 rgba(0, 0, 0, 0.25);
-          box-shadow: 0 4px 4px 0 rgba(0, 0, 0, 0.25);
-}
-
-.projects__item {
   -ms-flex-preferred-size: calc((100% - 30px) / 4);
       flex-basis: calc((100% - 30px) / 4);
   margin-right: 30px;
   margin-top: 30px;
 }
-
+.projects__item:hover {
+  -webkit-box-shadow: 0 4px 4px 0 rgba(0, 0, 0, 0.25);
+          box-shadow: 0 4px 4px 0 rgba(0, 0, 0, 0.25);
+}
 .projects__item:nth-child(-n+3) {
   margin-top: 0px;
 }
@@ -717,7 +682,6 @@ p {
   transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
   transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1), -webkit-transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
-
 .projects__item:hover .projects__box {
   -webkit-transform: translateY(0);
           transform: translateY(0);
@@ -740,7 +704,6 @@ p {
   -webkit-transition: opacity 500ms, visibility 500ms;
   transition: opacity 500ms, visibility 500ms;
 }
-
 .modal-backdrop.is-hidden .modal {
   -webkit-transform: translate(-50%, -50%) rotate(-180deg);
           transform: translate(-50%, -50%) rotate(-180deg);
@@ -777,13 +740,12 @@ p {
   padding: 9px 10px;
   background-color: var(--white-color);
 }
+.close-sign:hover .modal__icon {
+  fill: var(--active-color);
+}
 
 .modal__icon {
   fill: var(--header-logo-color);
-}
-
-.close-sign:hover .modal__icon {
-  fill: var(--active-color);
 }
 
 .modal__form {
@@ -808,7 +770,6 @@ p {
   border-radius: 4px;
   outline-style: none;
 }
-
 .modal__input:focus-visible {
   border-color: var(--active-color);
   -webkit-transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
@@ -833,41 +794,35 @@ p {
   padding: 12px 16px;
   outline-style: none;
 }
-
 .modal__textarea:focus-visible {
   border-color: var(--active-color);
   -webkit-transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
   transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
-
 .modal__textarea::-webkit-input-placeholder {
   font-size: 12px;
   line-height: 1.16;
   letter-spacing: 0.01em;
   color: rgba(117, 117, 117, 0.5);
 }
-
 .modal__textarea::-moz-placeholder {
   font-size: 12px;
   line-height: 1.16;
   letter-spacing: 0.01em;
   color: rgba(117, 117, 117, 0.5);
 }
-
 .modal__textarea:-ms-input-placeholder {
   font-size: 12px;
   line-height: 1.16;
   letter-spacing: 0.01em;
   color: rgba(117, 117, 117, 0.5);
 }
-
 .modal__textarea::-ms-input-placeholder {
   font-size: 12px;
   line-height: 1.16;
   letter-spacing: 0.01em;
   color: rgba(117, 117, 117, 0.5);
 }
-
 .modal__textarea::placeholder {
   font-size: 12px;
   line-height: 1.16;
@@ -888,8 +843,7 @@ p {
           transform: translateY(-50%);
   fill: var(--main-color);
 }
-
-.modal__input:focus + .input-icon {
+.modal__input:focus + .modal__input-icon {
   fill: var(--active-color);
   -webkit-transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
   transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
@@ -915,7 +869,7 @@ p {
   color: #757575;
 }
 
-.modal__checkbox .modal__icon-wrapper {
+.modal__icon-wrapper {
   width: 16px;
   height: 15px;
   border: 1.8px solid var(--main-color);
@@ -932,7 +886,7 @@ p {
           align-items: center;
 }
 
-.modal__checkbox .modal__agree-icon {
+.modal__agree-icon {
   fill: transparent;
 }
 
