--- a/sass/components/_benefits.scss
+++ b/sass/components/_benefits.scss
@@ -18,17 +18,19 @@
     border-radius: 4px;
     margin-right: 30px;
     margin-bottom: 30px;
-  }
-  .benefits__icon-item:last-child {
-    margin-right: 0;
+    &:last-child {
+      margin-right: 0;
+    }
   }
   
-  .benefits__item:not(:first-child) {
-    margin-left: 30px;
-  }
+  
   .benefits__item {
     min-width: 270px;
+    &:not(:first-child) {
+      margin-left: 30px;
+    }
   }
+
   .benefits__text {
     font-size: 14px;
     line-height: 1.71;
