--- a/sass/components/_cocial-icons.scss
+++ b/sass/components/_cocial-icons.scss
@@ -7,10 +7,14 @@
     margin-right: 10px;
     border-radius: 50%;
     transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    &:last-child {
+      margin-right: 0;
+    }
+    &:hover {
+      background-color: var(--active-color);
+    }
   }
-  .cocial__item:last-child {
-    margin-right: 0;
-  }
+  
   .cocial__link {
     width: 100%;
     height: 100%;
@@ -19,16 +23,13 @@
     justify-content: center;
     fill: #afb1b8;
     transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    &:hover {
+      fill: var(--white-color);
+     
+    }
+    &:focus {
+       background-color: var(--active-color);
+       fill: var(--white-color);
+    }
    
-    
-  }
-  .cocial__item:hover {
-    background-color: var(--active-color);
-  }
-  .cocial__link:hover {
-    fill: var(--white-color);
-  }
-  .cocial__link:focus {
-    background-color: var(--active-color);
-    fill: var(--white-color);
   }
