--- a/sass/components/_customers.scss
+++ b/sass/components/_customers.scss
@@ -8,10 +8,11 @@
   }
   .customers__item {
     margin-right: 30px;
+    &:last-child {
+      margin-right: 0;
+    }
   }
-  .customers__item:last-child {
-    margin-right: 0;
-  }
+  
   .customers__link {
     display: flex;
     fill: #afb1b8;
@@ -19,14 +20,13 @@
     border: 1px solid #afb1b8;
     border-radius: 4px;
     transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
-    
+    &:hover,
+    &:focus {
+      border-color: var(--active-color);
+      fill: var(--active-color);
+    }
   }
   .customers__list {
     display: flex;
   }
   
-  .customers__link:hover,
-  .customers__link:focus {
-    border-color: var(--active-color);
-    fill: var(--active-color);
-  }
