--- a/sass/components/_filters.scss
+++ b/sass/components/_filters.scss
@@ -5,9 +5,7 @@
     
   }
   
-  .filters__item:not(:first-child) {
-    margin-left: 8px;
-  }
+  
   .filters__button {
     transition:  250ms cubic-bezier(0.4, 0, 0.2, 1);
     padding: 6px 22px;
@@ -19,16 +17,21 @@
     color: var(--main-color);
     background-color: var(--filters-button-background-color);
     border-width: 0px;
-  }
-  .filters__button:hover,
-  .filters__button:focus {
+    &:hover,
+    &:focus {
     color: var(--white-color);
     background-color: var(--active-color);
+    }
   }
-  .filters__item:hover,
-  .filters__item:focus {
-    box-shadow: 0 4px 4px 0 rgba(0, 0, 0, 0.25);
-  }
+  
+  
   .filters__item {
     border-radius: 4px;
+    &:not(:first-child) {
+      margin-left: 8px;
+    }
+    &:hover,
+    &:focus {
+    box-shadow: 0 4px 4px 0 rgba(0, 0, 0, 0.25);
+    }
   }
