--- a/sass/components/_header.scss
+++ b/sass/components/_header.scss
@@ -1,18 +1,19 @@
-.header .container {
-    display: flex;
-    align-items: center;
-  }
+
   .header {
     border-bottom: 1px solid var(--border-color);
+    & .container {
+      display: flex;
+      align-items: center;
+    }
   }
+
+  
 
   .header__list {
     display: flex;
   }
   
-  .header__item:not(:first-child) {
-    margin-left: 50px;
-  }
+  
   .contacts {
     margin-left: auto;
   }
@@ -22,30 +23,29 @@
     line-height: 1.14;
     letter-spacing: 0.02em;
     position: relative;
-  }
-  
-  
-  
-  .header__item .studio::after {
-    content: "";
-    position: absolute;
-    width: 100%;
-    border-bottom: 4px solid var(--active-color);
-    border-radius: 2px;
-    left: 0;
-    bottom: -1px;
-    transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
-  } 
-  
-  .header__item .portfolio::after {
-    content: "";
-    position: absolute;
-    width: 100%;
-    border-bottom: 4px solid var(--active-color);
-    border-radius: 2px;
-    left: 0;
-    bottom: -1px;
-    transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    &:not(:first-child) {
+      margin-left: 50px;
+     }
+    & .studio::after {
+      content: "";
+      position: absolute;
+      width: 100%;
+      border-bottom: 4px solid var(--active-color);
+      border-radius: 2px;
+      left: 0;
+      bottom: -1px;
+      transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    } 
+    & .portfolio::after {
+      content: "";
+      position: absolute;
+      width: 100%;
+      border-bottom: 4px solid var(--active-color);
+      border-radius: 2px;
+      left: 0;
+      bottom: -1px;
+      transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    }
   }
   
   .header__link {
@@ -68,10 +68,9 @@
   
   .header__link--active {
     transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
-  }
-  
-  .header__link--active:hover,
-  .header__link--active:focus {
-    color: var(--active-color);
-    fill: var(--active-color);
+    &:hover,
+    &:focus {
+      color: var(--active-color);
+      fill: var(--active-color);
+    }
   }
