--- a/sass/components/_logo.scss
+++ b/sass/components/_logo.scss
@@ -1,6 +1,6 @@
 .logo {
     margin-right: 93px;
-    font-family: "Raleway";
+    font-family: $font-raleway;
     font-size: 26px;
     line-height: 31px;
     letter-spacing: 0.03em;
