--- a/sass/components/_projects.scss
+++ b/sass/components/_projects.scss
@@ -13,19 +13,17 @@
   
   .projects__item {
     cursor: pointer;
-  }
-  
-  .projects__item:hover {
-    box-shadow: 0 4px 4px 0 rgba(0, 0, 0, 0.25);
-  }
-  .projects__item {
     flex-basis: calc((100% - 30px) / 4);
     margin-right: 30px;
     margin-top: 30px;
+    &:hover {
+      box-shadow: 0 4px 4px 0 rgba(0, 0, 0, 0.25);
+    }
+    &:nth-child(-n + 3) {
+      margin-top: 0px;
+    }
   }
-  .projects__item:nth-child(-n + 3) {
-    margin-top: 0px;
-  }
+
   .projects__title {
     margin-bottom: 4px;
     font-size: 18px;
@@ -52,11 +50,10 @@
     background: rgba(33, 150, 243, 0.9);
     transform: translateY(100%);
     transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    .projects__item:hover &{
+      transform: translateY(0);
+    }
     
-  }
-  
-  .projects__item:hover .projects__box {
-    transform: translateY(0);
   }
   
   .projects__box-text {
