--- a/sass/components/_subscription.scss
+++ b/sass/components/_subscription.scss
@@ -25,17 +25,19 @@
     line-height: 1.25;
     letter-spacing: 0.03em;
     color: rgba(255, 255, 255,);
+    &::placeholder {
+      font-size: 16px;
+      line-height: 1.25;
+      letter-spacing: 0.03em;
+      color: rgba(255, 255, 255,);
+    }
+    &:focus-visible {
+      background-color: var(--white-color);
+      border-color: var(--white-color);
+      transition:  250ms cubic-bezier(0.4, 0, 0.2, 1);
+    }
   }
   
-  .form-subscription__input::placeholder {
-    font-size: 16px;
-    line-height: 1.25;
-    letter-spacing: 0.03em;
-    color: rgba(255, 255, 255,);
-  }
   
-  .form-subscription__input:focus-visible {
-    background-color: var(--white-color);
-    border-color: var(--white-color);
-    transition:  250ms cubic-bezier(0.4, 0, 0.2, 1);
-  }
+  
+  
