--- a/sass/utils/_base.scss
+++ b/sass/utils/_base.scss
@@ -8,7 +8,7 @@ p {
   background: var(--white-color);
 }
 .body {
-  font-family: "Roboto", sans-serif;
+ font-family: $font-roboto;
 }
 .container {
   max-width: 1200px;
