--- a/sass/utils/_button.scss
+++ b/sass/utils/_button.scss
@@ -1,5 +1,5 @@
 .button {
-    font-family: "Roboto";
+    font-family: $font-roboto;
     cursor: pointer;
     font-weight: 700;
     font-size: 16px;
