--- a/sass/components/_cocial-icons.scss
+++ b/sass/components/_cocial-icons.scss
@@ -1,7 +1,6 @@
 .cocial {
     display: flex;
-  }
-  .cocial__item {
+  &__item {
     width: 44px;
     height: 44px;
     margin-right: 10px;
@@ -13,9 +12,11 @@
     &:hover {
       background-color: var(--active-color);
     }
+    &--color {
+      background-color: rgba(255, 255, 255, 0.1);
+    }
   }
-  
-  .cocial__link {
+  &__link {
     width: 100%;
     height: 100%;
     display: flex;
@@ -31,5 +32,11 @@
        background-color: var(--active-color);
        fill: var(--white-color);
     }
-   
+    &--color {
+      fill: var(--white-color);
+    }
   }
+  }
+  
+  
+  
