--- a/sass/components/_customers.scss
+++ b/sass/components/_customers.scss
@@ -1,4 +1,5 @@
-.customers__title {
+.customers {
+  &__title {
     text-align: center;
     margin-bottom: 50px;
     font-size: 36px;
@@ -6,14 +7,13 @@
     letter-spacing: 0.03em;
     color: var(--main-color);
   }
-  .customers__item {
+  &__item {
     margin-right: 30px;
     &:last-child {
       margin-right: 0;
     }
   }
-  
-  .customers__link {
+  &__link {
     display: flex;
     fill: #afb1b8;
     padding: 15px 31px;
@@ -26,7 +26,12 @@
       fill: var(--active-color);
     }
   }
-  .customers__list {
+  &__list {
     display: flex;
   }
+}
+
+  
+  
+  
   
