--- a/sass/components/_filters.scss
+++ b/sass/components/_filters.scss
@@ -1,12 +1,10 @@
-.filters__list {
+.filters {
+  &__list {
     display: flex;
     justify-content: center;
     margin-bottom: 50px;
-    
   }
-  
-  
-  .filters__button {
+  &__button {
     transition:  250ms cubic-bezier(0.4, 0, 0.2, 1);
     padding: 6px 22px;
     font-weight: 500;
@@ -23,9 +21,7 @@
     background-color: var(--active-color);
     }
   }
-  
-  
-  .filters__item {
+  &__item {
     border-radius: 4px;
     &:not(:first-child) {
       margin-left: 8px;
@@ -35,3 +31,10 @@
     box-shadow: 0 4px 4px 0 rgba(0, 0, 0, 0.25);
     }
   }
+}
+
+  
+  
+ 
+  
+  
