--- a/sass/components/_footer.scss
+++ b/sass/components/_footer.scss
@@ -4,48 +4,13 @@
     & .container {
       display: flex;
     }
-    
-  }
-  .footer__logo {
+  &__logo {
     margin-right: 0;
     margin-bottom: 20px;
     display: inline-block;
     color: var(--white-color);  
   }
-  
-  .address__item {
-    font-style: normal;
-    font-size: 14px;
-    line-height: 1.71;
-    letter-spacing: 0.03em;
-    color: rgba(255, 255, 255, 0.6);
-  }
-  
-  .address__link--active {
-    transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
-    &:hover,
-    &:focus {
-    color: var(--active-color);
-    fill: var(--active-color);
-    }
-  }
-  
-  .address__map-link {
-    display: inline-block;
-    margin-bottom: 9px;
-    color: var(--white-color);
-  }
-  .address__mail-link {
-    display: inline-block;
-    margin-bottom: 9px;
-    color: inherit;
-  }
-  .address__tel-link {
-    display: inline-block;
-    color: inherit;
-  }
-  
-  .footer__title {
+  &__title {
     margin-bottom: 20px;
     font-size: 14px;
     line-height: 1.14;
@@ -53,13 +18,53 @@
     text-transform: uppercase;
     color: var(--white-color);
   }
-  .cocial__item--color {
-    background-color: rgba(255, 255, 255, 0.1);
-  }
-  .cocial__link--color {
-    fill: var(--white-color);
-  }
-  .footer__cocial {
+  &__cocial {
     margin-left: 70px;
     padding-top: 12px;
+  }  
   }
+  
+  
+  .address {
+    &__item {
+      font-style: normal;
+      font-size: 14px;
+      line-height: 1.71;
+      letter-spacing: 0.03em;
+      color: rgba(255, 255, 255, 0.6);
+    }
+    &__link--active {
+      transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
+      &:hover,
+      &:focus {
+      color: var(--active-color);
+      fill: var(--active-color);
+      }
+    }
+    &__map-link {
+      display: inline-block;
+      margin-bottom: 9px;
+      color: var(--white-color);
+    }
+    &__mail-link {
+      display: inline-block;
+      margin-bottom: 9px;
+      color: inherit;
+    }
+    &__tel-link {
+      display: inline-block;
+      color: inherit;
+    }
+  }
+  
+  
+  
+  
+  
+  
+  
+  
+  
+  
+  
+  
