--- a/sass/components/_header.scss
+++ b/sass/components/_header.scss
@@ -5,72 +5,68 @@
       display: flex;
       align-items: center;
     }
-  }
-
-  
-
-  .header__list {
-    display: flex;
-  }
-  
-  
-  .contacts {
-    margin-left: auto;
-  }
-  .header__item {
-    font-weight: 500;
-    font-size: 14px;
-    line-height: 1.14;
-    letter-spacing: 0.02em;
-    position: relative;
-    &:not(:first-child) {
-      margin-left: 50px;
-     }
-    & .studio::after {
-      content: "";
-      position: absolute;
-      width: 100%;
-      border-bottom: 4px solid var(--active-color);
-      border-radius: 2px;
-      left: 0;
-      bottom: -1px;
-      transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
-    } 
-    & .portfolio::after {
-      content: "";
-      position: absolute;
-      width: 100%;
-      border-bottom: 4px solid var(--active-color);
-      border-radius: 2px;
-      left: 0;
-      bottom: -1px;
-      transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    &__list {
+      display: flex;
+    }
+    &__item {
+      font-weight: 500;
+      font-size: 14px;
+      line-height: 1.14;
+      letter-spacing: 0.02em;
+      position: relative;
+      &:not(:first-child) {
+        margin-left: 50px;
+       }
+      & .studio::after {
+        content: "";
+        position: absolute;
+        width: 100%;
+        border-bottom: 4px solid var(--active-color);
+        border-radius: 2px;
+        left: 0;
+        bottom: -1px;
+        transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
+      } 
+      & .portfolio::after {
+        content: "";
+        position: absolute;
+        width: 100%;
+        border-bottom: 4px solid var(--active-color);
+        border-radius: 2px;
+        left: 0;
+        bottom: -1px;
+        transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
+      }
+    }
+    &__link {
+      color: var(--main-color);
+      padding: 32px 0 31px;
+      display: block;
+      &--active {
+        transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
+        &:hover,
+        &:focus {
+          color: var(--active-color);
+          fill: var(--active-color);
+        }
+      }
     }
   }
-  
-  .header__link {
-    color: var(--main-color);
-    padding: 32px 0 31px;
-    display: block;
-  }
-  
-  .contacts__link {
+
+  .contacts {
+    margin-left: auto;
+  &__link {
     display: flex;
     align-items: center;
     padding: 32px 0 31px;
     color: var(--link-color);
     fill: var(--link-color);
   }
-  
-  .icon {
+  &__icon {
     margin-right: 10px;
   }
-  
-  .header__link--active {
-    transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
-    &:hover,
-    &:focus {
-      color: var(--active-color);
-      fill: var(--active-color);
-    }
   }
+  
+  
+  
+  
