--- a/sass/components/_hero.scss
+++ b/sass/components/_hero.scss
@@ -10,9 +10,7 @@
       url(../images/bg-hero.jpg);
     background-repeat: no-repeat;
     background-position: center;
-  }
-  
-  .hero__title {
+  &__title {
     margin: 0 auto 30px;
     width: 645px;
     font-weight: 900;
@@ -20,3 +18,6 @@
     line-height: 1.36;
     color: var(--white-color);
   }
+  }
+  
+  
