--- a/sass/components/_modal-button.scss
+++ b/sass/components/_modal-button.scss
@@ -1,12 +1,14 @@
-.modal__form-button {
+.modal {
+  &__form-button {
     display: inline-block;
     width: 200px;
     height: 50px;
     padding: 10px 52px;
-    
   }
-  
-  .modal__button {
+  &__button {
     padding-left: 124px;
-    
   }
+}
+
+  
+  
