--- a/sass/components/_profile.scss
+++ b/sass/components/_profile.scss
@@ -1,35 +1,30 @@
 .profile {
     padding-top: 0;
-  }
-  .profile__title {
+   &__title {
     margin-bottom: 50px;
     text-align: center;
     font-size: 36px;
     line-height: 1.16;
     letter-spacing: 0.03em;
     color: var(--main-color);
-  }
-  .profile__list {
+   }
+   &__list {
     display: flex;
-  }
-  
-  
-  .profile__card-item {
+   }
+   &__card-item {
     position: relative;
     &:not(:first-child) {
       margin-left: 30px;
     }
-  }
-  
-  .profile__card-img {
+   }
+   &__card-img {
     position: absolute;
     top: 224px ;
     padding: 27px;
     width: 100%;
     background-color: rgba(47, 48, 58, 0.8);
-  }
-  
-  .profile__card-title {
+   }
+   &__card-title {
     font-size: 14px;
     line-height: 16px;
     text-align: center;
@@ -37,3 +32,13 @@
     text-transform: uppercase;
     color: var(--white-color);
   }
+  }
+  
+  
+  
+  
+  
+  
+  
+  
+  
