--- a/css/main.css
+++ b/css/main.css
@@ -309,7 +309,7 @@ p {
   padding: 30px 32px;
 }
 
-.cocial {
+.cocial, .cocial__link {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -334,9 +334,6 @@ p {
 .cocial__link {
   width: 100%;
   height: 100%;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
