--- a/sass/components/_cocial-icons.scss
+++ b/sass/components/_cocial-icons.scss
@@ -19,7 +19,7 @@
   &__link {
     width: 100%;
     height: 100%;
-    display: flex;
+    @extend .cocial;
     align-items: center;
     justify-content: center;
     fill: #afb1b8;
